<?xml version="1.0" encoding="utf-8"?>
<layout>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ChooseLevelFragment">


        <TextView
            android:id="@+id/tv_title_choose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_choose_level"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_test_choose_level" />

        <Button
            android:id="@+id/btn_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/btn_easy_choose_level" />

        <Button
            android:id="@+id/btn_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/btn_normal_choose_level" />

        <Button
            android:id="@+id/btn_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/btn_hard_choose_level" />

    </LinearLayout>

</layout>